2009-03-23 delx
	* Smarter placement of new terminal windows. It is aware of multiple
	  monitors as well as workspaces (Spaces). Windows are positioned on
	  screen so they have the smallest overlap with any other window.

2009-03-20 delx
	* charWidth is now set with ceil() rather than being truncated. This
	  should make wider characters fit correctly.
	* If char j on a line is dirty, force redraw of j+1 also. This ensures
	  that any subpixel rendering that is done does not leave trails on the
	  next character.

2009-03-16 delx
	* The cursor is now double-width when over a double-width character.
	* Fixed selection of wide chars after breaking it on 2009-03-13

2009-03-13  delx
	* Remove character caching code. Testing shows the drawing to run just
	  as fast without it. This reduces code complexity and colour reproduction
	  bug that was triggered by changing OSX's ColorSync calibration profiles,
	  eg when switching to a new monitor. It also makes operations that would
	  previously have required clearing the cache happen faster.
	* Fixed high density background colors:
	  $ echo -ne '\e[46m LD \e[106m HI \e[00m\n'
	* Refactored the selection handling. It no longer touches VT100Screen,
	  instead keeping a copy of the start & end points of the current and last
	  drawn selection. This saves [PTYTextView drawRect] from having to treat
	  all characters in the scrollback buffer as dirty.

2009-03-07  delx
	* Dramatically improve scrolling speed, iTerm no longer redraws the
	  whole terminal when scrolled, only the lines that have changed
	* Scroll on new input stops/starts on pushing home/end respectively
	* Set magic defaults to allow antialiasing on small fonts. Previously
	  even if antialiasing was enabled in iTerm, OSX would force it off
	  for smaller fonts. You can do this manually from the Info panel.
	* Cleaned up [PTYTextView drawRect]

2009-02-09  delx
	* Corrected xterm mouse scroll wheel button reporting (#2254084)

2009-02-07  delx