@@ -1,3 +1,6 @@
+2009-03-28 delx
+	* Guaranteed restoration of old window position upon exiting fullscreen
+
 2009-03-23 delx
 	* Smarter placement of new terminal windows. It is aware of multiple
 	  monitors as well as workspaces (Spaces). Windows are positioned on
